fix: missing paddings

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -9,7 +9,7 @@
         margin: 0 auto 1rem;
         font-size: 2rem;
         line-height: 2.75rem;
-        padding: 8rem 0 0;
+        padding: 8rem 16px 0;
         max-width: 1216px;
         &::before {
             content: "";
