--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -6,7 +6,7 @@
         font-size: 2.25rem;
         line-height: 3rem;
         max-width: 1216px;
-        padding: 1rem 0;
+        padding: 1rem 16px 0;
     }
 
     &__about {
@@ -73,7 +73,7 @@
             position: relative;
             &::after {
                 content: "";
-                height: 32px;
+                height: 2rem;
                 width: 2px;
                 background: $grey;
                 display: block;
@@ -97,19 +97,3 @@
         }
     }
 }
-
-// .repositories {
-//     &__list {
-//         display: block;
-//         list-style-type: none;
-//         margin: 0;
-//         padding: 0;
-//     }
-// }
-
-// @supports (display: grid) {
-//     .repositories__list {
-//         display: grid;
-//         grid-template-columns: 1fr 1fr;
-//     }
-// }
